# pumpkinbot

./: .env.example  .gitignore  README.md  chatbot.py  notice_crawler.py  pyproject.toml  start.py
config/: crawler.yaml  llm.yaml
database/: detail_data.json  notices.json  test_data.json
database/raw/: detail_data.json  menu_data.json
src/: config_loader.py  data_manager.py  scheduler.py
src/app/: ui_app.py
src/app/crawler/: base.py  detail.py  menu.py
src/core/: config.py  text_utils.py  types.py
src/data/: json_loader.py
src/index/: faiss_store.py
src/models/: llm_provider.py
src/rag/: engine.py  prompt.py
src/retrieval/: hybrid.py  reranker.py
src/services/: chat_service.py
