[project]
name = "pumpkinbot"
version = "0.1.0"
description = ""
authors = [
    {name = "yunji",email = "yunji3711@naver.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.9.7 || >3.9.7,<3.13"
dependencies = [
    "streamlit (>=1.47.0,<2.0.0)",
    "langchain (>=0.3.26,<0.4.0)",
    "faiss-cpu (>=1.11.0.post1,<2.0.0)",
    "openai (>=1.97.0,<2.0.0)",
    "pymupdf (>=1.26.3,<2.0.0)",
    "langchain-openai (>=0.3.28,<0.4.0)",
    "langchain-community (>=0.3.27,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
