[tool.poetry]
name = "pumpkinbot"
version = "0.1.0"
description = ""
authors = ["yunji <yunji3711@naver.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.13"
streamlit = ">=1.47.0,<2.0.0"
langchain = ">=0.3.26,<0.4.0"
faiss-cpu = ">=1.11.0.post1,<2.0.0"
langchain-community = ">=0.3.27,<0.4.0"
sentence-transformers = "^2.5.1"
langchain-google-genai = ">=2.1.8,<3.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
