[tool.poetry]
name = "pumpkinbot"
version = "0.1.0"
description = ""
authors = ["yunji <yunji3711@naver.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.13"
streamlit = ">=1.47.0,<2.0.0"

# LangChain 코어
langchain = ">=0.3.26,<0.4.0"
langchain-community = ">=0.3.27,<0.4.0"
langchain-google-genai = ">=2.1.8,<3.0.0"
langchain-huggingface = "^0.1.0"

# 벡터/희소 검색
faiss-cpu = ">=1.7.4,<2.0.0"
rank-bm25 = "^0.2.2"

# 임베딩/리랭킹
transformers = ">=4.44,<5.0"
torch = ">=2.2,<3.0"
sentence-transformers = "^2.5.1"

# 크롤·데이터
requests = "^2.32.4"
beautifulsoup4 = "^4.13.4"
pandas = "^2.3.1"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
